# rag_experiment

./: .env.example  .gitignore  GEMINI.md  README.md  app.py  cta_interview_system_mockup.html  main.py  pyproject.toml  schema_ex.txt  test_openai.py
datasets/: consolidate_knowledge.py  extract_knowledge.py  user_prompt.txt
datasets/consolidated/: consolidated_knowledge.json
datasets/output/: 20260217_extracted.json  20260218_extracted.json  20260219_extracted.json  20260220_extracted.json  20260224_extracted.json  (+1 more)
docs/: app-reading-guide.md  appendix-reflective-dialogue-survey.html  cta-acceptance-test-template.md  cta-mvp-backlog.md  current-workflow-visualizer.html  current-workflow.md  directory-structure.md  talkability-consultation.html
evals/: README.md
pages/: 02_Eval_Dataset_Board.py
prompts/: gate_prompt.md  gate_prompt.txt  overall.md  response_refiner_prompt.md
scripts/: analyze_jsonl_logs.py  build_eval_dataset_from_logs.py  generate_eval_drafts_from_favorites.py  run_cta_sprint1_demo.py  run_cta_sprint2_checks.py
src/: __init__.py
src/core/: env.py  (+5 more)
tests/: test_chat_logging.py  test_chat_media.py  test_cta_engine_sprint1.py  test_cta_export.py  test_cta_knowledge.py  test_cta_metrics.py  test_cta_regression.py  test_cta_state.py  test_eval_workbench.py  test_favorite_generation.py  test_gate.py  test_log_to_eval.py  test_prompt_middleware.py  test_rag.py  test_rag_policy.py  test_response_refiner.py  test_router.py  test_token_usage.py  test_translator.py  test_turn_handler.py
tmp/: extract_knowledge.py  overall.txt  system_prompt.txt
(+54 files in other folders)
